[CF][EGISZNRPLATFORM-1742] - Spring Boot 3.x\n2o-boot 6.x\n2o 7.28.x